--- a/cv_english.tex
+++ b/cv_english.tex
@@ -17,7 +17,17 @@
 \nopagenumbers{}                                  % uncomment to suppress automatic page numbering for CVs longer than one page
 
 % adjust the page margins
-\usepackage[scale=0.85]{geometry}
+% \usepackage[top=0.85in]{geometry}
+% \usepackage[bottom=0.85in]{geometry}
+% \usepackage[right=0.85in]{geometry}
+% \usepackage[left=0.85in]{geometry}
+
+\usepackage[
+          left=0.85in,
+          right=0.85in,
+          top=0.65in,
+          bottom=0.4in
+          ]{geometry}
 %\setlength{\footskip}{136.00005pt}                 % Depending on the amount of information in the footer, you need to change this value. comment this line out and set it to the size given in the warning
 \setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvheadnamewidth}{10cm}            % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risk...
