key courses added

--- a/cv_english.tex
+++ b/cv_english.tex
@@ -116,8 +116,8 @@
 \section{Education}
 %\section{Education}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}
-\cventry{10/2019--05/2023}{M.Sc. in Computational Engineering}{\newline Friedrich-Alexander-Universität}{Erlangen, Germany}{}{}  
-
+\cventry{10/2019--05/2023}{M.Sc. in Computational Engineering}{\newline Friedrich-Alexander-Universität}{Erlangen, Germany}{}{
+\textbf{Key Courses:} Pattern Recognition, Deep Learning, Pattern Analysis, Computer Vision, Machine Learning for Time Series, Artificial Intelligence II, Optimization for Engineers, Programming in C++}  
 \vspace{1em} % Add a one-line space
 
 \cventry{05/2012--12/2016}{B.Sc. in Petroleum and Mining Engineering}{\newline Chittagong University of Engineering and Technology} {Chittagong, Bangladesh}{}{}
