comma separated skills

--- a/cv_english.tex
+++ b/cv_english.tex
@@ -129,151 +129,55 @@
 
 \section{Skills}
 
-\cvitem{\textbf{General Skills}}{%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Machine Learning (ML)
-      \item Deep Learning (DL)
-      %\item Pattern Recognition
-      \item Data Science
-      %\item Time-series Forecasting
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Data Visualization
-      \item Data Wrangling
-      \item Statistical Analysis
-      %\item Time-series Analysis
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.3\textwidth}
-    \begin{itemize}
-      \item Data Structures and Algorithms
-      %\item Natural Language Processing (NLP)
-      \item Agile Methodologies
-      \item Time-series Analysis
-      %\item Time-series Clustering
-      %\item VSCode 
-    \end{itemize}
-  \end{minipage}%
-}
-\vspace{0.5em} % Add a one-line space
-
-\cvitem{\textbf{Languages and Frameworks}}{%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Python
-      \item PyTorch
-      \item TensorFlow
-      \item Keras
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item NumPy
-      \item Pandas
-      \item Matplotlib
-      \item Plotly
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.3\textwidth}
-    \begin{itemize}      
-      \item Scikit-Learn
-      \item Optuna
-      \item FastAPI 
-      %\item Hydra
-      %\item OpenCV
-      %\item Huggingface
-      \item C{++}
-    \end{itemize}
-  \end{minipage}%
+% \vspace{0.5em} % Add a one-line space
+\cvitem{\textbf{General Skills}}{
+  % use comma as separator
+  \begin{enumerate}
+    \item[] Machine Learning, Deep Learning, Data Science,
+    Data Visualization, Data Wrangling, Statistical Analysis,
+    Data Structures and Algorithms, Agile Methodologies
+    %\item Time-series Forecasting
+  \end{enumerate}
 }
 
-\cvitem{\textbf{Big Data and Databases}}{
-  \begin{itemize}
-    \item PySpark
-    \item SQL (PostgreSQL)
-    % Add more skills as needed
-  \end{itemize}
+\cvitem{\textbf{Languages and Frameworks}}{
+  % use comma as separator
+  \begin{enumerate}
+    \item[] Python, C++, PyTorch, TensorFlow, Keras, NumPy, Pandas, 
+    Matplotlib, Plotly, Optuna, Scikit-Learn, FastAPI, 
+    Huggingface, OpenCV, Hydra
+  \end{enumerate}
 }
+
+\cvitem{\textbf{Big Data and Databases}}{%
+  \begin{enumerate}
+    \item[] PySpark, SQL (PostgreSQL)
+  \end{enumerate}
+}
+
 \vspace{0.5em} % Add a one-line space
 
 \cvitem{\textbf{MLOps and Cloud Computing}}{%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Docker
-      \item Git 
-      \item GitLab
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item GitHub 
-      \item MLFlow
-      \item CI/CD pipelines
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.30\textwidth}
-    \begin{itemize}
-      \item AWS
-      %\item Azure
-      \item Google Colab
-      \item Streamlit
-      % Add more skills as needed
-    \end{itemize}
-  \end{minipage}%
+  \begin{enumerate}
+    \item[] Docker, Git, GitHub, GitLab, MLFlow, 
+    CI/CD pipelines, AWS, Google Colab, Streamlit
+  \end{enumerate}
 }
 
 \vspace{1em} % Add a one-line space
 
-\cvitem{\textbf{Soft Skills}}{%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Collaboration
-      \item Problem Solving
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Continuous Learning
-      \item Innovation
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.30\textwidth}
-    \begin{itemize}
-      \item Communication
-      \item Adaptability
-      % Add more skills as needed
-    \end{itemize}
-  \end{minipage}%
-}
+% \cvitem{\textbf{Soft Skills}}{%
+%   \begin{enumerate}
+%     \item[] Collaboration, Problem Solving, Continuous Learning, Innovation, Communication, Adaptability
+%   \end{enumerate}
+% }
 
 \vspace{1em} % Add a one-line space
 
 \cvitem{\textbf{Others}}{%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      \item Microsoft PowerBI
-      \item Microsoft Excel
-      %\item LaTeX
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.25\textwidth}
-    \begin{itemize}
-      %\item Jupyter Notebook
-      \item Linux (CLI)
-      \item Windows (WSL)
-    \end{itemize}
-  \end{minipage}%
-  \begin{minipage}[t]{.30\textwidth}
-    \begin{itemize}
-      \item MacOS
-      %\item MS Office
-      \item Confluence
-      % Add more skills as needed
-    \end{itemize}
-  \end{minipage}%
+  \begin{enumerate}
+    \item[] Microsoft PowerBI, Microsoft Excel, LaTeX, Jupyter Notebook, Linux (CLI), Windows (WSL), MacOS, Confluence
+  \end{enumerate}
 }
 
 %\cvcomputer{\textbf{General Skills}}{Machine Learning, Deep Learning, Pattern Recognition, Data Visualization, Data Wrangling, Statistical Analysis, Data Structures and Algorithms, Natural Language Processing, Agile Methodologies}{\textbf{Languages and Frameworks}}{Python, PyTorch, TensorFlow, Keras, NumPy, Pandas, Matplotlib, Plotly, Scikit-Learn, Optuna, FastAPI, Huggingface}
